<resources>
    <string name="app_name">Ônix</string>
    <string name="count_tasks">Tarefas:</string>
    <string name="count_completed">Finalizadas:</string>
    <string name="calendar">Calendário:</string>
    <string name="create">Criar</string>
    <string name="title_activity_create_task">CreateTask</string>
    <string name="hello_world">Hello Square World!</string>
    <string name="create_new_task">Criar nova tarefa:</string>
    <string name="task_title">Título:</string>
    <string name="enter_task_title">Informe o título da tarefa...</string>
    <string name="task_description">Descrição:</string>
    <string name="enter_task_description">Informe uma descrição para sua tarefa...</string>
    <string name="task_time">Horário:</string>
    <string name="task_save">Salvar</string>
    <string name="tasks">Tarefas:</string>
    <string name="no_tasks">Ainda não há tarefas cadastradas...</string>
    <string name="select">Selecione</string>
    <string name="task">Tarefa:</string>
    <string name="options">Opções:</string>
    <string name="finish">Finalizar</string>
    <string name="delete">Deletar</string>
    <string name="to">Para:</string>
    <string name="created_at">Criado:</string>
    <string name="yes">Sim</string>
    <string name="no">Não</string>
    <string name="welcome">Seja muito bem-vindo(a)!</string>
    <string name="brand">Logo</string>
</resources>