<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/create_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:contentDescription="@string/create"
        android:elevation="1dp"
        android:src="@drawable/ic_baseline_add_24"
        android:tint="@color/light" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <ScrollView
            android:id="@+id/main_scroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:outlineAmbientShadowColor="@color/colorGray"
            android:outlineSpotShadowColor="@color/colorGray"
            tools:ignore="UselessParent">

            <LinearLayout
                android:id="@+id/main_linear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="Olá, Matheus!"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="5dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="20dp"
                        android:text="@string/calendar"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <CalendarView
                        android:id="@+id/calendar"
                        android:layout_width="match_parent"
                        android:layout_height="310dp"
                        android:layout_marginTop="35dp" />
                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="170dp"
                        android:layout_margin="10dp"
                        android:layout_marginEnd="5dp"
                        android:layout_weight="1"
                        app:cardCornerRadius="10dp"
                        app:cardElevation="5dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:text="@string/count_tasks"
                            android:textAlignment="center"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/count_tasks"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical|center"
                            android:text="0"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="60sp"
                            android:textStyle="bold" />

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="170dp"
                        android:layout_margin="10dp"
                        android:layout_marginStart="5dp"
                        android:layout_weight="1"
                        app:cardCornerRadius="10dp"
                        app:cardElevation="5dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/count_completed"
                            android:textAlignment="center"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/count_completed"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical|center"
                            android:text="0"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="60sp"
                            android:textStyle="bold" />
                    </androidx.cardview.widget.CardView>
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/tasks"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/no_tasks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/no_tasks"
                    android:textAlignment="center"
                    android:textColor="@color/lightGray"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/tasks_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:orientation="vertical" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</RelativeLayout>